# hurribot

./: .gitignore  Cargo.toml  README.md  result.csv
data/: BINANCE_ADAUSDT, 30.csv  BINANCE_ADAUSDT, 60.csv  BINANCE_BNBUSDT, 30.csv  BINANCE_BNBUSDT, 60.csv  BINANCE_BTCUSDT, 30.csv  BINANCE_BTCUSDT, 60.csv  BINANCE_ETHUSDT, 30.csv  BINANCE_ETHUSDT, 60.csv  BINANCE_SOLUSDT, 30.csv  BINANCE_SOLUSDT, 60.csv  BTCUSDT_1h.csv
src/: algorithm.rs  algrithm.rs  backtest.rs  binance_api.rs  binance_futures.rs  candle_chart.rs  contract.rs  controller.rs  error.rs  lib.rs  main.rs  market.rs  signal.rs  strategy.rs  utils.rs
src/algorithm/: roll.rs
src/algrithm/: roll.rs
src/backtest/: contract.rs  strategy.rs
src/backtest/strategy/: geo_strategy.rs  roll_strategy.rs
src/market/: binance_market.rs
src/strategy/: geo_strategy.rs  roll.rs  roll_strategy.rs
tests/: strategy_from_csv.rs  tests.rs
