[package]
name = "hurribot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = "0.20.2"
chrono = "0.4.31"
csv = "1.3.0"
log = "0.4.20"
time = {version = "0.3.31", features = ["local-offset"]}
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
