[package]
name = "hurribot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = {git = "https://github.com/cyborg42/binance-rs.git"}
csv = "1.3.0"
log = "0.4.20"
plotters = "0.3.5"
rand = "0.8.5"
time = {version = "*", features = ["local-offset", "macros"]}
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
serde = { version = "1", features = ["derive"] }
toml = "0.8.10"
crossbeam = "*"
anyhow = "*"
error-chain = "*"
tuples = "*"
dashmap = "*"
thiserror = "*"
parking_lot = "*"
rayon = "*"
opaque-debug = "*"
fastrand = "*"

[profile.release]
panic = "abort"